<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rides"
            android:title="@string/rides" />
        <item
            android:id="@+id/nav_chats"
            android:title="@string/chats" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
