<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Switch
            android:id="@+id/notifications_Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:padding="16dp"
            android:checked="true" />
        <Switch
            android:id="@+id/notifyDriverNear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_near_notification"
            android:padding="16dp" />
        <Switch
            android:id="@+id/notifyRiderNear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rider_near_notification"
            android:padding="16dp" />
        <Switch
            android:id="@+id/sound_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:padding="16dp" />
        <Switch
            android:id="@+id/vibrate_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:padding="16dp" />
    </LinearLayout>

</FrameLayout>
